# ChangeLog for net-misc/xrdp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/xrdp/ChangeLog,v 1.10 2014/10/23 10:23:41 mgorny Exp $

  23 Oct 2014; Michał Górny <mgorny@gentoo.org> files/xrdp-initd,
  xrdp-0.6.1.ebuild, xrdp-0.8.0.ebuild:
  Fix install paths in init.d. Set proper --localstatedir. Both reported by Jan
  Psota.

*xrdp-0.8.0 (23 Oct 2014)
*xrdp-0.6.1 (23 Oct 2014)

  23 Oct 2014; Michał Górny <mgorny@gentoo.org> +files/startwm.sh,
  +files/xrdp-initd, +files/xrdp-sesman.pamd, +metadata.xml, +xrdp-0.6.1.ebuild,
  +xrdp-0.8.0.ebuild:
  Initial commit of net-misc/xrdp, bug #352363.