@@ -6,26 +6,26 @@ AUX xrdp-initd 829 SHA256 bdc5620e4854454c0617c57dd6fdf7398ef089f9a33481f7e6dacc
 AUX xrdp-sesman.pamd 156 SHA256 a153eb2505131600f7e1664728c029fa0255a355dd93c758946a4fac42baedc6 SHA512 37e5b4557be51dfc25b041a553d0464854586d7a10f16740d335be16c9b677f38a08495ef05a01259c3f8d401eb44542bd939dd23d1afa8bac4d9d9e144cb1a4 WHIRLPOOL 49072d111265aadac2c6ab8792d18f1c7b4630d52e0968907ec149a539082335a66ac54b3856727f7045c030af5f81866d332428f42c9cd657816a5b866a7de3
 DIST xrdp-0.8.0.tar.xz 1671376 SHA256 433535039f8b8766d9c22f62de9599afa94dd553e72d9791cec85a5e2f436a60 SHA512 bb2afefce7f53b6c3bca30cb6913171211df63a700f7d70325c1722348d5d31981e1d417727e48fd14aad500d0454e4126e6e1f81f8c09da4928b02f4acff26b WHIRLPOOL 39c1d4852f6f927fd348d345a8d4f4a79824eca0d5682340908d28f3b6b497ae33bfed944294b061b118e4154ed7c5dce15878302145ffabc2ca6b3a2eb07818
 DIST xrdp-v0.6.1.tar.gz 1563654 SHA256 6880003b26799e4154a9486f671b6fc1b0487de0da2289573f46c090146e5a3b SHA512 d2aa5c300ed4c5e84137776f3d5f63736a8d674ef3a96eda271fd6d80ecc394a1148dd9d09b3acf3916c774fd15fe7400271ffb034a45ddae6b34ea30fb2465c WHIRLPOOL 34d51ad9976eff16b2ad68405b54e6d91345f57791f2a35a1676981416a83a0d13f0bb1442fafeb5ff2d74dc3c08610a7e01909181c358beb4770e677d36f833
-EBUILD xrdp-0.6.1.ebuild 2370 SHA256 5731540811f2e69aac4997ee49249026d6cbd828c481c34b55d4e7a274b7dd99 SHA512 9941ef5edd753eb7f34b47ea044f4383db27f0c29c4396c2309223306612a894b711b95f64b2cfa3cacc4e345956f9377d55633ddc98b2441f6f9bf5b40fe864 WHIRLPOOL b0c6ebf97bb7f312c9f6c6a3c8fc66cabf4cbdefb7147c799e6223600acf31351654fcc1c0522790f51a4383c854ed2f8fce6ac24792959dbc234bc5db43c6cc
-EBUILD xrdp-0.8.0.ebuild 3670 SHA256 9ee76434ef032ec75790934a12810bda39502e1edd017fff52e007f936d8daf2 SHA512 37d5083b486b070f736ec74b5f468f55bcaae5f7d1fda83f28b82965619650a4b94c40dd23b90cde5df20be0e9e9f3f52a689cd148eb67399e41303967c15dc4 WHIRLPOOL 1080322d28348869d4090564278f2afd70c0e2216ad27bbf6babd0942170668b2d2e36f3b2f73dc23bb68eb30eae406214ebc0c6a1e975dce46ae2bc4bc6d86f
-MISC ChangeLog 671 SHA256 dc1d141bbaaa5f34c59e844b9f74dd233b63f8a704cd6c0e68bb5207861c5bd5 SHA512 d4cb63b4683b35bd8b6a581d8c2fdc08b82d407481d4f12c6b6206da02a78fa14eeb9cdd5a7818c0213c47b086477dbefaad0691605a393d904bf5d7751494c5 WHIRLPOOL 176c278eb34dc235f0367ad571ddf51c0a0bf3a981cc8a3ed1618a0a1eeeda6dee15dc536291cd93bbb2e17389fefe08bb68eee6c819003c03347b5639e46ca5
+EBUILD xrdp-0.6.1.ebuild 2855 SHA256 22adbd4fc98ec7533985cea406e8d4e9eb044feabb8ef65cf30b38a197ee593f SHA512 25e5480a8225975d2a0859f1e3c8bcaedc656fc4f45ad912f6185cec3c94779ce16ac8ce961a03bf19fee82d8933e3258eac0407dc61adef6c32b5cf8792cc14 WHIRLPOOL d5809c6120d853a0eb19113627013afa746e1d08863bdf36183156dda6ed807ca8c3651361ac58d7089859310c507230e55f421fd34ac80aea7a7682ca1ef55a
+EBUILD xrdp-0.8.0.ebuild 4155 SHA256 a5f447e8112f7391cf68ff2302dc7928888a92ccecd747f8dc0efef6b67f47d8 SHA512 4a0890a00109e1f5b51971b7f4956527fbddf7474833a4d441738551d0f85f1c15b59c34704c8e07ea26e2feba44afd523bbe983239d17b3d42c57431ccddfd8 WHIRLPOOL 1810b3a38e5fee7616a2066b2a401e593d6dcdf10bbc50f87f4666340ec06d68cd600cc0fb5f03289bc7a02762ffa6fda6936e7012d604f79eeed00182e8294f
+MISC ChangeLog 875 SHA256 a46ff9f497cf3e9f3eefff425ed961b0fc05956e6f4ef7a4838f916357dd1ee3 SHA512 bace062e37975698ff50a8efa507e59776b94c5ba4f9d00f04004d64e7f580d5e44fd01c15c4628f17de22b1482d82d6b8d5e2aa99e4eabc57c8981d5ec7950b WHIRLPOOL 16e1df91b612fbe82a546ffcbc77098b475a54d5bdc5d8b53b6efabee4f8daaa2530df2758b0544fde40a46f17598b75f59925f4af8264bfb551e0cfce83d836
 MISC metadata.xml 345 SHA256 c31282487a5eb15b45e22867d2d88998390f96cd852505be88cda2fe0a44c172 SHA512 ac48599a59c2d3f303f31e564d3af5248a8ba27f63f2f50b5135bbfb3bc95c73fedf345c523862ba284aec161bd94ff21eb4f640071c61d2ed86685b39f698de WHIRLPOOL a5b0f439e70a6b18f3b5e2021878a69243508a1a9a27514d76a2da06883d7becbc84ad6553f8d39a9471e334268b8c93b378ae9856b7209b47c9793b6b7974c5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJUSNcuXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJUSOKPXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOsnMP/RHGhekV3l3/L0uskQeWvw8Z
-mbA2edLm3/+PKTeySJbv3goIfBZ1RdIgRUSTD6LrEcnUM8Na2cDBwcIKIwm9pNmY
-k5ypElH6r04npSdSeJJgpgXsp91gUT0a8EDTmdNm40H+utoojbox5Fe5vMhuJwHk
-AeI6gsMOae4f7JbYYTork+DPFAoIbv3521haljcwtY87E9e+1grFl6DWRXIj+qOY
-lTYbXMkCs0EhNpRExW5GBgboKyZOxja+aZdHfRH+mGNoBruDjwM2pVaJAfiRJy7o
-NmxCKihibbMS/4rqedEpBiC6GAGUoSHwOk2MxnWVfTYBJ/VgBan+crtgzPkVSkwm
-rIEzl12ScQUG3TKdn6nYTiUiwkEbegDtUtJRUicbv/d+0LON/gavUf00RgTDP1AA
-gPA6QvBXgdlRQot66pY+XmcdznHZlCvIh6+2n60cGU9M6mvX9YlajizIZhauwXxB
-tUBAhtt57FaQbZCSL3ZP0FHxo37Rkf/AL9j09ezNrSTcbInrGs0B4w0TU9L7jAZy
-he9Npiav/W+nlXP2L+s42Y9+9ctFBvoNdKXOOdnRTh65Q9xG/KsQFEtqZP1JphxC
-HKbFSJ3C1peY2K45WW2uMbN0XMCT4UsrQs3WaU4/OKhIVrFukVUQdwreZk/38VHS
-l4+bc7krhSIbU9AzRe92
-=R9d6
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZO1T8QANItvhrEFJodJsLGa4suJQyu
+4S+KoJl83l0O9IAjma1hiQ4uCpBsGnvSPWbOLR4u4Ty7Xqu+WU/1ALJzM4qoeRay
+kUQTBs6hXpaZvSzfrxx5k4Txz4P4MKVlaOiY5UNHk1nsR4Emhs2ZObcTlUJ2LDuU
+ATbLKph/DQBDwPzBDf5+hTFG5FZjGlMVfs9b/cAcvPOmT9Kvb80Tq++HhboWuClf
+3CkKcM3yi/H8XPywE/DCPAOKPqa97fyK9/rQHdLhq+NXFmCzO5cNJaUsx7IglMrg
+y6Huek6VKBXSdWmxPSAjgvlzSpgfZMBlHUdxyZGM37IMrW/TnWMlAFWkH9p5zkS8
+f1h4FnOPBgBeKW0BZult58tjVtK69Txdw9j5ISHrlcHk13UcKp5T/xYujh0e2Y07
+Ex8UP5Bz/uDcjuAADsmpWZw7BvNaRdL8ruJfei3hxvotJ+UJaz8dI764hK27WqiD
+6+FqiQY5lbKtgVj534LBVwWWPTJY4Ul+E1AQ6GokNnJbcwigy0g5xGbCC4SI7PdR
+o7HfwHsY2ITZijXaqRYLkuN8M/ZI310fF6FOFDii8GBYZ5GucPGTkSiug5cEFXJa
+R8Cz76PxxrnMmtmMskyTfpI2ndOmN9ydPyRbv/Pyh14486uhqO2SgLB2FDNtbEyj
+TrL1eALmI15Lb4BEYPY+
+=JkQG
 -----END PGP SIGNATURE-----
